Fix the logic for RPS
The payer choice is no longer input from the
prompt intead it is input from the button press

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+    <div class="play-container">
+        <button class="rps" value="Rock">Rock</button>
+        <button class="rps" value="Paper">Paper</button>
+        <button class="rps" value="Scissors">Scissors</button>
+    </div>
     
     <script src="script.js"></script>
 
