Add reset btn element

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <div class="play-container">
+        <h1>Rock, Paper, Scissors</h1>
         <button class="rps" value="Rock">Rock</button>
         <button class="rps" value="Paper">Paper</button>
         <button class="rps" value="Scissors">Scissors</button>
+        <h2 class="result"></h2>
+        <h3 class="choices"></h3>
+        <h3 class="scores"></h3>
+        <h2 class="winner"></h2>
     </div>
     
     <script src="script.js"></script>
