--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="play-container">
         <h1>Rock, Paper, Scissors</h1>
-        <button class="rps" value="Rock">Rock</button>
-        <button class="rps" value="Paper">Paper</button>
-        <button class="rps" value="Scissors">Scissors</button>
+        <div class="buttons">
+            <button class="rps" value="Rock">Rock</button>
+            <button class="rps" value="Paper">Paper</button>
+            <button class="rps" value="Scissors">Scissors</button>
+        </div>
         <h2 class="result"></h2>
         <h3 class="choices"></h3>
         <h3 class="scores"></h3>
         <h2 class="winner"></h2>
     </div>
-    
+
     <script src="script.js"></script>
 
 </body>
+
 </html>
